--- a/American css/AAbriefing.css
+++ b/American css/AAbriefing.css
@@ -1,6 +1,6 @@
 body {
     background: white;
-    100vh:display: ;
+    
     
 }
 #logo {
@@ -191,8 +191,95 @@ p {
     
     position: relative;
     top: -340px;
-    left: 13%;
-    
+    left: 13%; 
 }
+main {
+    background: rgba(0, 0, 0, 0.02);
+    position: absolute;
+    top: 171px;
+    left: %;
+    width: 1314px;
+    height: 630px;
+}
+#brf_1 {
+    background: white;
+    position: relative;
+    top: 20px;
+    left: 1%;
+    width: 410px;
+    height: 430px;
+    border-color: rgba(0, 0, 0, 0.07);
+    border-style: solid;
+    border-width: 2px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+}
+#text_1 {
+    font-size: 10px;
+    text-align: center;
+    color: rgba(0, 0, 0,1);
+    text
+}
+#img_1 {
+    position: absolute;
+    right: 1%;
+    top: 02px;
+}
+.gru {
+    font-family: calibri;
+    font-weight: 600;
+    color: rgba(0, 0, 0,.6);
+}
+.es {
+    font-family: calibri;
+    font-weight: 500;
+    color: #0277cd;
+    position: relative;
+    left: -7%;
+    top: 55px;
+}
+.sm {
+    font-size: 15px;
+    font-family: calibri;
+    font-weight: 500;
+    color: rgba(0, 0, 0,1);
+    position: relative;
+    top: 75px;
+}
+#brf_2 {
+    background: white;
+    position: relative;
+    top: -414px;
+    left: 33%;
+    width: 430px;
+    height: 430px;
+    border-color: rgba(0, 0, 0, 0.07);
+    border-style: solid;
+    border-width: 2px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
 
-  
+}
+#brf_3 {
+    background: white;
+    position: relative;
+    top: -923px;
+    left: 66.5%;
+    width: 430px;
+    height: 430px;
+    border-color: rgba(0, 0, 0, 0.07);
+    border-style: solid;
+    border-width: 2px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+
+}
+#gru {
+
+}
