--- a/American css/AAbriefing.css
+++ b/American css/AAbriefing.css
@@ -1,7 +1,5 @@
 body {
-    background: white;
-    
-    
+    background: white;    
 }
 #logo {
     position: absolute;
@@ -168,7 +166,7 @@ h2 {
     font-family: Calibri;
     font-weight: bolder;
     background: #3592d7;
-    width: 98.5%;
+    width: 96vw;
     height: 60px;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
@@ -188,7 +186,6 @@ p {
     color: red;
 }
 #image {
-    
     position: relative;
     top: -340px;
     left: 13%; 
@@ -198,8 +195,8 @@ main {
     position: absolute;
     top: 171px;
     left: %;
-    width: 1314px;
-    height: 630px;
+    width: 96vw;
+    height: 75vh;
 }
 #brf_1 {
     background: white;
@@ -208,7 +205,10 @@ main {
     left: 1%;
     width: 410px;
     height: 430px;
-    border-color: rgba(0, 0, 0, 0.07);
+    border-left-color: rgba(0, 0, 0, 0.05);
+    border-right-color: rgba(0, 0, 0, 0.05);
+    border-top-color: rgba(0, 0, 0, 0.04);
+    border-bottom-color: rgba(0, 0, 0, 0.15);
     border-style: solid;
     border-width: 2px;
     border-top-left-radius: 4px;
@@ -217,36 +217,47 @@ main {
     border-bottom-right-radius: 2px;
 }
 #text_1 {
+    font-family: calibri;
     font-size: 10px;
     text-align: center;
+    text-align: justify;
+    line-height: 1.5;
     color: rgba(0, 0, 0,1);
-    text
+    max-width: 370px;
+    left: 18px;
+    top: 110px;
 }
 #img_1 {
     position: absolute;
     right: 1%;
     top: 02px;
 }
-.gru {
+#gru_1{
     font-family: calibri;
     font-weight: 600;
+    font-size: 25px;
     color: rgba(0, 0, 0,.6);
-}
-.es {
-    font-family: calibri;
-    font-weight: 500;
-    color: #0277cd;
     position: relative;
-    left: -7%;
-    top: 55px;
+    left: 10px;
+    top: px;
 }
-.sm {
+#es_1{
     font-size: 15px;
     font-family: calibri;
     font-weight: 500;
     color: rgba(0, 0, 0,1);
     position: relative;
-    top: 75px;
+    top: 35px;
+    left: -30px;
+}
+#sm_1{
+    font-family: calibri;
+    font-size: 15px;
+    font-weight: 500;
+    color: #0277cd;
+    position: relative;
+    left: 5%;
+    top: 40px;
 }
 #brf_2 {
     background: white;
@@ -255,31 +266,119 @@ main {
     left: 33%;
     width: 430px;
     height: 430px;
-    border-color: rgba(0, 0, 0, 0.07);
+    border-left-color: rgba(0, 0, 0, 0.05);
+    border-right-color: rgba(0, 0, 0, 0.05);
+    border-top-color: rgba(0, 0, 0, 0.04);
+    border-bottom-color: rgba(0, 0, 0, 0.15);
     border-style: solid;
     border-width: 2px;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     border-bottom-left-radius: 2px;
     border-bottom-right-radius: 2px;
-
+}
+#text_2 {
+    font-family: calibri;
+    font-size: 10px;
+    text-align: center;
+    text-align: justify;
+    line-height: 1.5;
+    color: rgba(0, 0, 0,1);
+    max-width: 370px;
+    left: 467px;
+    top: 132px;
+}
+#img_2 {
+    position: absolute;
+    right: 34%;
+    top: 25px;
+}
+#gru_2 {
+    font-family: calibri;
+    font-weight: 600;
+    font-size: 25px;
+    color: rgba(0, 0, 0,.6);
+    position: relative;
+    left: 445px;
+    top: -846px;
+}
+#es_2 {
+    font-size: 15px;
+    font-family: calibri;
+    font-weight: 500;
+    color: rgba(0, 0, 0,1);
+    position: relative;
+    top: -811px;
+    left: 420px;
+}
+#sm_2 {
+    font-family: calibri;
+    font-size: 15px;
+    font-weight: 500;
+    color: #0277cd;
+    position: relative;
+    left: 470px;
+    top: -806px;
 }
 #brf_3 {
     background: white;
     position: relative;
-    top: -923px;
+    top: -917px;
     left: 66.5%;
-    width: 430px;
+    width: 425px;
     height: 430px;
-    border-color: rgba(0, 0, 0, 0.07);
+    border-left-color: rgba(0, 0, 0, 0.05);
+    border-right-color: rgba(0, 0, 0, 0.05);
+    border-top-color: rgba(0, 0, 0, 0.04);
+    border-bottom-color: rgba(0, 0, 0, 0.15);
     border-style: solid;
     border-width: 2px;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     border-bottom-left-radius: 2px;
     border-bottom-right-radius: 2px;
-
 }
-#gru {
-
+#text_3 {
+    font-family: calibri;
+    font-size: 10px;
+    text-align: center;
+    text-align: justify;
+    line-height: 1.5;
+    color: rgba(0, 0, 0,1);
+    max-width: 370px;
+    left: 900px;
+    top: 132px;
+}
+#img_3 {
+    position: absolute;
+    right: 1%;
+    top: 25px;
+}
+#gru_3 {
+    font-family: calibri;
+    font-weight: 600;
+    font-size: 25px;
+    color: rgba(0, 0, 0,.6);
+    position: relative;
+    left: 880px;
+    top: -1350px;
+}
+#es_3 {
+    font-size: 15px;
+    font-family: calibri;
+    font-weight: 500;
+    color: rgba(0, 0, 0,1);
+    position: relative;
+    left: 850px;
+    top: -1313px;
+    
+}
+#sm_3 {
+    font-family: calibri;
+    font-size: 15px;
+    font-weight: 500;
+    color: #0277cd;
+    position: relative;
+    left: 900px;
+    top: -1310px;
 }
