--- a/American css/AAbriefing.css
+++ b/American css/AAbriefing.css
@@ -1,5 +1,13 @@
+
+
+
+
+html {
+    height: 100vh;
+}
 body {
-    background: white;    
+    background: white;  
+    height: 100vh;  
 }
 #logo {
     position: absolute;
@@ -93,13 +101,15 @@ body {
     width: 130px;
 }
 h2 {
+    background: #b50218;
     font-family: Calibri;
     font-weight: bold;
     font-size: 15px;
     color: #0277cd;
     position: relative;
     top: -285px;
-    left: 85%;    
+    left: 85%;  
+    width: 130px;  
 }
 #injury {
     font-weight: bolder ;
@@ -166,7 +176,7 @@ h2 {
     font-family: Calibri;
     font-weight: bolder;
     background: #3592d7;
-    width: 96vw;
+    width: 97.5vw;
     height: 60px;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
@@ -190,195 +200,63 @@ p {
     top: -340px;
     left: 13%; 
 }
-main {
-    background: rgba(0, 0, 0, 0.02);
-    position: absolute;
-    top: 171px;
-    left: %;
-    width: 96vw;
-    height: 75vh;
+#body_2 {
+    background: rgba(0, 0, 0, 0.1);
+    position: relative;
+    top: -370px;
+    height: 470px; 
 }
-#brf_1 {
+#brf_1, #brf_2, #brf_3 { 
     background: white;
-    position: relative;
-    top: 20px;
-    left: 1%;
-    width: 410px;
-    height: 430px;
-    border-left-color: rgba(0, 0, 0, 0.05);
-    border-right-color: rgba(0, 0, 0, 0.05);
-    border-top-color: rgba(0, 0, 0, 0.04);
-    border-bottom-color: rgba(0, 0, 0, 0.15);
-    border-style: solid;
-    border-width: 2px;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    border-bottom-left-radius: 2px;
-    border-bottom-right-radius: 2px;
-}
-#text_1 {
-    font-family: calibri;
-    font-size: 10px;
-    text-align: center;
-    text-align: justify;
-    line-height: 1.5;
-    color: rgba(0, 0, 0,1);
-    max-width: 370px;
-    left: 18px;
-    top: 110px;
-}
-#img_1 {
-    position: absolute;
-    right: 1%;
-    top: 02px;
-}
-#gru_1{
-    font-family: calibri;
-    font-weight: 600;
-    font-size: 25px;
-    color: rgba(0, 0, 0,.6);
-    position: relative;
-    left: 10px;
-    top: px;
-}
-#es_1{
-    font-size: 15px;
-    font-family: calibri;
-    font-weight: 500;
-    color: rgba(0, 0, 0,1);
-    position: relative;
-    top: 35px;
-    left: -30px;
-}
-#sm_1{
-    font-family: calibri;
-    font-size: 15px;
-    font-weight: 500;
-    color: #0277cd;
-    position: relative;
-    left: 5%;
-    top: 40px;
-}
-#brf_2 {
-    background: white;
-    position: relative;
-    top: -414px;
-    left: 33%;
+    display: inline-block;
     width: 430px;
-    height: 430px;
-    border-left-color: rgba(0, 0, 0, 0.05);
-    border-right-color: rgba(0, 0, 0, 0.05);
-    border-top-color: rgba(0, 0, 0, 0.04);
-    border-bottom-color: rgba(0, 0, 0, 0.15);
-    border-style: solid;
-    border-width: 2px;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    border-bottom-left-radius: 2px;
-    border-bottom-right-radius: 2px;
+    height: 450px;
+    margin-top: 10px;
+    margin-left: 9px;
+    border-radius: 4px;
 }
-#text_2 {
-    font-family: calibri;
-    font-size: 10px;
-    text-align: center;
+#text_1, #text_2, #text_3 {
+    position: absolute;
+    font-family: calibri; font-size: 10px; color: rgba(0, 0, 0, 1);
     text-align: justify;
     line-height: 1.5;
-    color: rgba(0, 0, 0,1);
-    max-width: 370px;
-    left: 467px;
-    top: 132px;
-}
-#img_2 {
-    position: absolute;
-    right: 34%;
-    top: 25px;
-}
-#gru_2 {
-    font-family: calibri;
-    font-weight: 600;
-    font-size: 25px;
-    color: rgba(0, 0, 0,.6);
-    position: relative;
-    left: 445px;
-    top: -846px;
-}
-#es_2 {
-    font-size: 15px;
-    font-family: calibri;
-    font-weight: 500;
-    color: rgba(0, 0, 0,1);
-    position: relative;
-    top: -811px;
-    left: 420px;
-}
-#sm_2 {
-    font-family: calibri;
-    font-size: 15px;
-    font-weight: 500;
-    color: #0277cd;
-    position: relative;
-    left: 470px;
-    top: -806px;
-}
-#brf_3 {
-    background: white;
-    position: relative;
-    top: -917px;
-    left: 66.5%;
-    width: 425px;
-    height: 430px;
-    border-left-color: rgba(0, 0, 0, 0.05);
-    border-right-color: rgba(0, 0, 0, 0.05);
-    border-top-color: rgba(0, 0, 0, 0.04);
-    border-bottom-color: rgba(0, 0, 0, 0.15);
-    border-style: solid;
-    border-width: 2px;
-    border-top-left-radius: 4px;
-    border-top-right-radius: 4px;
-    border-bottom-left-radius: 2px;
-    border-bottom-right-radius: 2px;
-}
-#text_3 {
-    font-family: calibri;
-    font-size: 10px;
-    text-align: center;
-    text-align: justify;
-    line-height: 1.5;
-    color: rgba(0, 0, 0,1);
-    max-width: 370px;
-    left: 900px;
-    top: 132px;
-}
-#img_3 {
-    position: absolute;
-    right: 1%;
-    top: 25px;
-}
-#gru_3 {
-    font-family: calibri;
-    font-weight: 600;
-    font-size: 25px;
-    color: rgba(0, 0, 0,.6);
-    position: relative;
-    left: 880px;
-    top: -1350px;
-}
-#es_3 {
-    font-size: 15px;
-    font-family: calibri;
-    font-weight: 500;
-    color: rgba(0, 0, 0,1);
-    position: relative;
-    left: 850px;
-    top: -1313px;
+    max-width: 400px;
+    top: 125px;
+    margin-left: 15px;
     
 }
-#sm_3 {
-    font-family: calibri;
-    font-size: 15px;
-    font-weight: 500;
-    color: #0277cd;
-    position: relative;
-    left: 900px;
-    top: -1310px;
+#img_1, #img_2, #img_3 {
+   position: absolute;
+   width: 150px;
+   margin-top: 5px;
+   margin-left: 275px;
+   position: absolute;
 }
+#gru_1, #gru_2, #gru_3 {
+    position: absolute;
+    font-family: calibri; font-size: 25px; font-weight: 400;
+    margin-left: 4px;
+    
+}  
+#es_1, #es_2, #es_3 {
+    position: absolute;
+    font-family: calibri; font-size: 15px; font-weight: 400; color: #0277cd;
+    margin-top: 55px;
+    margin-left: 4px;
+}
+#sm_1, #sm_2, #sm_3 {
+    font-family: calibri; font-size: 15px; font-weight: 400;
+    margin-top: 95px;
+    margin-left: 4px;
+}
+
+font-family: calibri;
+font-size: 10px;
+text-align: center;
+text-align: justify;
+line-height: 1.5;
+color: rgba(0, 0, 0,1);
+max-width: 370px;
+max-height: 280px;
+left: 18px;
+top: 110px;
