--- a/American css/AAbriefing.css
+++ b/American css/AAbriefing.css
@@ -1,7 +1,3 @@
-
-
-
-
 html {
     height: 100vh;
 }
@@ -9,6 +5,7 @@ body {
     background: white;  
     height: 100vh;  
 }
+
 #logo {
     position: absolute;
     top: 60px;
@@ -101,7 +98,7 @@ body {
     width: 130px;
 }
 h2 {
-    background: #b50218;
+    
     font-family: Calibri;
     font-weight: bold;
     font-size: 15px;
@@ -201,27 +198,33 @@ p {
     left: 13%; 
 }
 #body_2 {
-    background: rgba(0, 0, 0, 0.1);
-    position: relative;
-    top: -370px;
-    height: 470px; 
+    display: flex;
+    flex-direction: row;
+    padding-top: 10px;
+    justify-content: space-around;
+    row-gap: 10px;
+    align-items: flex-start;
+    background: rgba(0, 0, 0, 0.03);
+    margin-top: -370px;
+    height: 470px;
+    
 }
 #brf_1, #brf_2, #brf_3 { 
     background: white;
     display: inline-block;
     width: 430px;
     height: 450px;
-    margin-top: 10px;
-    margin-left: 9px;
-    border-radius: 4px;
+    border-radius: 6px;
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 0.05);
 }
 #text_1, #text_2, #text_3 {
     position: absolute;
-    font-family: calibri; font-size: 10px; color: rgba(0, 0, 0, 1);
+    font-family: calibri; font-size: 11px; color: rgba(0, 0, 0, 1);
     text-align: justify;
     line-height: 1.5;
     max-width: 400px;
-    top: 125px;
+    top: 315px;
     margin-left: 15px;
     
 }
@@ -250,13 +253,3 @@ p {
     margin-left: 4px;
 }
 
-font-family: calibri;
-font-size: 10px;
-text-align: center;
-text-align: justify;
-line-height: 1.5;
-color: rgba(0, 0, 0,1);
-max-width: 370px;
-max-height: 280px;
-left: 18px;
-top: 110px;
